<resources>
    <string name="app_name">Papryka</string>
    <string name="welcome_back">Welcome back!</string>
    <string name="login">Login</string>
    <string name="initial">Initial</string>
    <string name="password">Password</string>
    <string name="login_with_biometric">Login with biometric</string>
    <string name="use_password">Use password</string>
    <string name="schedule">Schedule</string>
    <string name="back">Back</string>
    <string name="teaching_detail">Teaching Detail</string>
    <string name="course_outline" translatable="false">Course Outline</string>
    <string name="date">Date</string>
    <string name="date_format" translatable="false">yyyy-MM-dd</string>
    <string name="shift" translatable="false">Shift</string>
    <string name="view">View</string>
    <string name="initial_hint">INITIAL(s), separated by ;</string>
    <string name="job_list">Job List</string>
    <string name="legend">Legend</string>
    <string name="not_done">" = Not Done"</string>
    <string name="deadline">" = Deadline"</string>
    <string name="waiting_for_approval">" = Waiting for approval"</string>
    <string name="approved">" = Approved"</string>
    <string name="room_transaction">Room Transaction</string>
    <string name="include_unapproved_data">Include unapproved data</string>
    <string name="include_onsite_status">Include onsite status</string>
    <string name="settings">Settings</string>
    <string name="today">Today</string>
    <string name="this_week">This week</string>
    <string name="by_initial">Initial</string>
    <string name="by_generation">Generation</string>
    <string name="by_position">Position</string>
    <string name="language">Change Language</string>
    <string name="no_schedule">You have no schedule on this day.</string>
    <string name="monday">Monday</string>
    <string name="tuesday">Tuesday</string>
    <string name="wednesday">Wednesday</string>
    <string name="thursday">Thursday</string>
    <string name="friday">Friday</string>
    <string name="saturday">Saturday</string>
    <string name="sunday">Sunday</string>
    <string name="invalid_day" translatable="false">Invalid Day</string>
    <string name="home">Home</string>
    <string name="room">Room</string>
    <string name="subject">Subject</string>
    <string name="classroom">Class</string>
    <string name="teaching_room">Room</string>
    <string name="campus">Campus</string>
    <string name="logout">LOGOUT</string>
    <string name="mid_code" translatable="false">Mid Code</string>
    <string name="day">Day</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string-array name="shifts">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
    </string-array>
    <string-array name="days">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
    </string-array>
    <string-array name="mid_codes">
        <item>1</item>
        <item>2</item>
    </string-array>
    <string-array name="languages">
        <item>English</item>
        <item>Bahasa Indonesia</item>
    </string-array>
    <string-array name="campuses">
        <item>Anggrek</item>
        <item>Syahdan</item>
        <item>Kijang</item>
        <item>Alam Sutera</item>
        <item>Bekasi</item>
        <item>Bandung</item>
        <item>Malang</item>
        <item>Semarang</item>
    </string-array>
    <string-array name="generations">
        <item>13-0</item>
        <item>14-0</item>
        <item>15-2</item>
        <item>16-1</item>
        <item>16-2</item>
        <item>17-1</item>
        <item>17-2</item>
        <item>18-1</item>
        <item>18-2</item>
        <item>19-1</item>
        <item>19-2</item>
        <item>20-1</item>
        <item>20-2</item>
        <item>21-1</item>
        <item>21-2</item>
        <item>22-1</item>
        <item>22-2</item>
        <item>23-1</item>
        <item>23-2</item>
        <item>24-1</item>
        <item>24-2</item>
    </string-array>
    <string-array name="positions">
        <item>Software Teaching Assistant</item>
        <item>Software Assistant Supervisor</item>
        <item>Software Network Administrator</item>
        <item>Software Network Administrator Supervisor</item>
        <item>Software Operation Management Officer</item>
        <item>Software Research Development Training</item>
        <item>Software Subject Coordinator</item>
        <item>Software Subject Development Officer</item>
    </string-array>
    <!-- TODO: Remove or change this placeholder text -->
</resources>