<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".fragments.SettingsFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="32dp"
        tools:ignore="UselessParent">

        <TextView
            android:id="@+id/tvSettings"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:fontFamily="@font/ubuntu"
            android:text="@string/settings"
            android:textColor="@color/black"
            android:textSize="22sp"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center"
            android:layout_marginBottom="16dp">
            <TextView
                android:id="@+id/tvLanguage"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:text="@string/language"
                android:textSize="16sp"
                android:fontFamily="@font/ubuntu"
                android:textColor="@color/black"/>

            <Spinner
                android:id="@+id/spLanguage"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/edit_text_background"
                android:fontFamily="@font/ubuntu"
                android:textColor="@color/black"
                android:padding="4dp"
                android:textSize="14sp"
                />
        </LinearLayout>

        <Button
            android:id="@+id/btnLogout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/cinnabar"
            app:cornerRadius="8dp"
            android:text="@string/logout"
            android:textStyle="bold"
            android:fontFamily="@font/ubuntu"
            android:textAllCaps="true"/>
    </LinearLayout>

</FrameLayout>